--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=5000
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://scheduleplusplus.cwyp81ksw3vp.us-west-2.rds.amazonaws.com:5432/postgres
+spring.datasource.username=caroline
+spring.datasource.password=${RDS_PASSWORD}
+
+cloud.aws.region.static=us-west-2
+cloud.aws.stack.auto = false
+
