--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,19 @@ server.port=5000
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://scheduleplusplus.cwyp81ksw3vp.us-west-2.rds.amazonaws.com:5432/postgres
-spring.datasource.username=caroline
+spring.datasource.url=jdbc:postgresql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+spring.datasource.username=${RDS_USERNAME}
 spring.datasource.password=${RDS_PASSWORD}
 
 cloud.aws.region.static=us-west-2
 cloud.aws.stack.auto = false
 
+
+
+
+
+#### FOR TESTING PURPOSES ONLY, initial seeding when program runs
+#spring.datasource.initialization-mode=always
+#spring.datasource.initialize=true
+#spring.datasource.schema=classpath:/experiment.sql
+#spring.datasource.continue-on-error=true
