--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,23 @@ server.port=5000
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
 spring.datasource.username=${RDS_USERNAME}
 spring.datasource.password=${RDS_PASSWORD}
 
-cloud.aws.region.static=us-west-2
-cloud.aws.stack.auto = false
 
 
 
+################# GRAVEYARD, keeping in case I need to dig it back up #####################
+#spring.jpa.hibernate.show-sql=true
 
+# These 2 lines are from amigoscode's tutorial, so it MIGHT clash with line 6 above
+#spring.datasource.hikari.jdbc-url=url=jdbc:postgresql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+#spring.datasource.hikari.maximum-pool-size=30
+
+# needed this at one point, but not anymore, keep around for now
+# cloud.aws.region.static=us-west-2
+# cloud.aws.stack.auto = false
 
 #### FOR TESTING PURPOSES ONLY, initial seeding when program runs
 #spring.datasource.initialization-mode=always
