solved id generator increment 1 vs 50 issue, yay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.url=jdbc:postgresql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAM
 spring.datasource.username=${RDS_USERNAME}
 spring.datasource.password=${RDS_PASSWORD}
 
+# disables hibernate's id-autogenerator, which incrs by 50 and that clashes with postgres' 1
+# also need to add in svc file ... @SequenceGenerator(name="col_name_in_sql", allocationSize=1)
+hibernate.id.new_generator_mappings=true
 
 
 
