Twilio can send texts via postman.  haven't tested with front end yet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,16 @@ spring.datasource.password=${RDS_PASSWORD}
 hibernate.id.new_generator_mappings=true
 
 
+twilio.account_sid=${ACCOUNT_SID}
+twilio.auth_token=${AUTH_TOKEN}
+twilio.trial_number=${TRIAL_NUMBER}
+
+
+
+
+
+
+
 
 ################# GRAVEYARD, keeping in case I need to dig it back up #####################
 #spring.jpa.hibernate.show-sql=true
