--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,11 @@
             <artifactId>spring-security-oauth2-jose</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>7.42.0</version>
+        </dependency>
 
 
         <dependency>
